# openmesh

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: mesh_benchmark.rs
src/: face.rs  lib.rs  mesh.rs  vertex.rs
src/core/: aabb.rs  edge_map.rs  error.rs  math.rs  mod.rs  report.rs  validation.rs
src/io/: mod.rs  obj.rs  stl.rs
tests/: test_io.rs  test_large_mesh.rs  test_mesh.rs
tests/test-data/: monkey-bad-normal.stl  monkey-intersecting.stl  monkey-non-manifold.stl  monkey-normal-inward.stl  monkey-open-edges.stl  monkey-zero-faces.stl
