[package]
name = "openmesh"
version = "0.2.1"
edition = "2024"

documentation = "https://docs.rs/openmesh"
homepage = "https://github.com/p-sira/openmesh"
repository = "https://github.com/p-sira/openmesh"
license = "BSD-3-Clause"
description = "Vertex-face mesh validation library"

keywords = ["mesh", "geometry", "validation", "topology", "graphics"]
categories = ["graphics", "mathematics", "algorithms", "no-std"]

include = ["/src", "/LICENSE"]

[dependencies]
num-traits = { version = "0.2", default-features = false }
stl_io = { version = "0.11", optional = true }
rustc-hash = { version = "2.1.2", default-features = false }
rayon = { version = "1.10", optional = true }
obj = { version = "0.10.2", optional = true }
hashbrown = { version = "0.16.1", default-features = false, features = [
    "alloc",
] }
nalgebra = { version = "0.34.2", default-features = false, optional = true }

[dev-dependencies]
criterion = "0.5.1"

[features]
default = ["std"]
libm = ["num-traits/libm"]
std = ["num-traits/std"]
rayon = ["std", "dep:rayon", "hashbrown/rayon"]
io = ["std"]
stl = ["io", "dep:stl_io"]
obj = ["io", "dep:obj"]
nalgebra = ["dep:nalgebra"]

[[test]]
name = "test_mesh"
path = "tests/test_mesh.rs"
required-features = ["stl"]

[[test]]
name = "test_io"
path = "tests/test_io.rs"
required-features = ["io"]

[[test]]
name = "test_large_mesh"
path = "tests/test_large_mesh.rs"
required-features = ["obj"]

[[bench]]
name = "mesh_benchmark"
harness = false
required-features = ["stl", "obj"]
